Adjust preview code examples and fix implementation for &

--- a/popup.html
+++ b/popup.html
@@ -51,7 +51,7 @@
     <label>Enable debugging</label>
     <input name="enableDebug" id="enableDebug" type="checkbox"/>
     <label>Add your preview code</label>
-    <label>example <b>PJugJwYH</b> ("Do not add the ?mtmPreviewMode part")</label>
+    <label>example <b>PUugUwJJ</b> ("Do not add the ?mtmPreviewMode part")</label>
     <label>You will find this code in you TagManager</label>
     <input id="previewCode" name="previewCode" type="text"/>
     <label>Add the domain where you want this code to run.</label>
