Change names and images

--- a/popup.html
+++ b/popup.html
@@ -44,8 +44,8 @@
     </style>
   </head>
   <body>
-    <img id="logo" width="50" src="images/digi128.png">  
-    <h1>Matomo Browser Tools by @tomper00 at Open Digital Analytics</h1>  
+    <img id="logo" width="50" src="images/oda-logo-128.png">  
+    <h1>Matomo Browser Tools by @tomper00</h1>  
     <div id="tagmanagerDebugWrapper">  
     <h2>Appy Matomo TagManager debugging to all your pages</h2>
     <label>Enable debugging</label>
@@ -55,7 +55,7 @@
     <label>You will find this code in you TagManager</label>
     <input id="previewCode" name="previewCode" type="text"/>
     <label>Add the domain where you want this code to run.</label>
-    <label>Example: example.com </label>
+    <label>Example: example.com (do not include http or https) </label>
     <input id="debugDomain" name="debugDomain" type="text"/>      
     </div>
     <script src="popup.js"></script>
